README更新 (#4)
* 変更点の記述

* READMEの拡充